syntax = "proto3";

package stream;

service Hellor {
  rpc UnaryHello (Message) returns (Message) {}
  rpc ClientStreamHello (stream Message) returns (Message) {}
  rpc ServerStreamHello (Message) returns (stream Message) {}
  rpc MutualStreamHello (stream Message) returns (stream Message) {}
}

message Message {
  string message = 1;
}
